# Training

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: TerraformCI.yml  TerraformChild.yml  test-action.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  design_patterns_guidelines.md  project_overview.md  suggested_commands.md  system_environment.md  task_completion_checklist.md  task_completion_workflow.md
AWS/Resources/RAG/be/answer_user_query/src/: pyproject.toml
AWS/Resources/RAG/be/src/embed_doc/: TEST_README.md  pyproject.toml  test_main.py
AWS/Resources/RAG/src/embedding/: main.py  pyproject.toml  requirements.txt
AWS/Resources/RAG/src/embedding/layer/: requirements.txt
Kubernetes/hello-k8s/: README.md  dockerfile  package-lock.json  package.json  tsconfig.json
Kubernetes/learning-roadmap/: README.md
Kubernetes/next-nest-k8s-app/: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml
NewRelic/: README.md
Resources/ACM/: main.tf  provider.tf  versions.tf
Resources/APIGateway/: .terraform.lock.hcl  data.tf  locals.tf  main.tf  versions.tf
Resources/Budget/: .terraform.lock.hcl  data.tf  main.tf  variables.tf  versions.tf
Resources/Budget_SNS/: .terraform.lock.hcl  main.tf  variables.tf
Resources/CloudTrail/: .terraform.lock.hcl  Policy.json.tpl  main.tf  versions.tf
Resources/EC2/: main.tf
Resources/ECS/: .terraform.lock.hcl  data.tf  main.tf  versions.tf
Resources/OpenSearch/: data.tf  (+5 more)
Terraform/: CLAUDE.md
(+604 files in other folders)
