[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuki Mitsuyama",email = "55880586+y-mitsuyama1216@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "3.10.5"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "opensearch-py (>=2.8.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
