[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.10.5"
dependencies = [
    "langchain (>=0.3.21,<0.4.0)",
    "boto3 (>=1.37.17,<2.0.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "h11 (>=0.16.0,<0.17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
